[package]
name = "automerge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
octocrab = "0.38.0"
regex = "1.10.5"
serde = "1.0.200"
serde_json = "1.0.116"
simple_logger = "5.0.0"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.14"
